I made a wrapper for aside, intro, doors, made doors on the intro block, corrected the z-index in the intro, b-doors redid the rules for nth-child

--- a/src/blocks/b-intro-second/b-intro-second-mobile.less
+++ b/src/blocks/b-intro-second/b-intro-second-mobile.less
@@ -13,7 +13,7 @@ h1 {
     height: 100%;
     display: block;
     position: absolute;
-    z-index: -2;
+    z-index: 1;
         &::after {
             content: "";
             position:absolute;
