--- a/src/less/collection-desktop-style.less
+++ b/src/less/collection-desktop-style.less
@@ -7,7 +7,7 @@
         max-width: 1600px;
         margin: 0 auto;
         position: relative;
-        background-color: transparent;
+        background-color: @whiteFF;
     }
 }
 @import url("variables.less");
