--- a/src/less/doors-desktop-style.less
+++ b/src/less/doors-desktop-style.less
@@ -7,7 +7,14 @@
         max-width: 1600px;
         margin: 0 auto;
         position: relative;
-        background-color: transparent;
+        background-color: @whiteFF;
+    }
+}
+.b-doors-wrapper {
+    display: flex;
+    &__section {
+        position: relative;
+        width: calc(100% - 320px)
     }
 }
 @import url("variables.less");
